Archive2/ca/2e74b4532847aa/output
main.cpp:10:5: error: static_assert failed ""
    static_assert(is_class<decltype(f)>::value, "");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
